bluec-tests/tests/invalid/typedef/existing_identifier.c
int main(void) {
    typedef int missing MyInt;
    return 0;
}
